# flashflow

./: .cursorrules  .gitignore  CMakeLists.txt  README.md
apps/: ff_bench.cpp  ff_stream.cpp
bench/: benchmark_orderbook.cpp  histogram.gnuplot
include/: orderbook.hpp
src/: binance_feed.cpp  binance_feed.hpp
tests/: test_binance_live.cpp  test_binance_replay.cpp  test_feed_stub.cpp  test_orderbook.cpp
